--- a/share/gtk-straw-viewer.glade
+++ b/share/gtk-straw-viewer.glade
@@ -1118,50 +1118,10 @@ long – longer than 20 minutes</property>
                                               </packing>
                                             </child>
                                             <child>
-                                              <object class="GtkFrame" id="frame21">
-                                                <property name="visible">True</property>
-                                                <property name="can_focus">False</property>
-                                                <property name="label_xalign">0</property>
-                                                <property name="shadow_type">none</property>
-                                                <child>
-                                                  <object class="GtkAlignment" id="alignment20">
-                                                    <property name="visible">True</property>
-                                                    <property name="can_focus">False</property>
-                                                    <property name="left_padding">12</property>
-                                                    <child>
-                                                      <object class="GtkComboBoxText" id="comboboxtext5">
-                                                        <property name="visible">True</property>
-                                                        <property name="can_focus">False</property>
-                                                        <property name="active">1</property>
-                                                        <items>
-                                                          <item translatable="yes">none</item>
-                                                          <item translatable="yes">moderate</item>
-                                                          <item translatable="yes">strict</item>
-                                                        </items>
-                                                        <signal name="changed" handler="combobox_safesearch_changed" swapped="no"/>
-                                                      </object>
-                                                    </child>
-                                                  </object>
-                                                </child>
-                                                <child type="label">
-                                                  <object class="GtkLabel" id="label26">
-                                                    <property name="visible">True</property>
-                                                    <property name="can_focus">False</property>
-                                                    <property name="label" translatable="yes">&lt;b&gt;Safe Search:&lt;/b&gt;</property>
-                                                    <property name="use_markup">True</property>
-                                                  </object>
-                                                </child>
-                                              </object>
-                                              <packing>
-                                                <property name="expand">False</property>
-                                                <property name="fill">False</property>
-                                                <property name="position">5</property>
-                                              </packing>
-                                            </child>
-                                            <child>
                                               <object class="GtkExpander" id="more_options_expander">
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">True</property>
+                                                <property name="expanded">True</property>
                                                 <signal name="activate" handler="activate_more_options_expander" swapped="no"/>
                                                 <child>
                                                   <object class="GtkBox" id="vbox20">
