--- a/share/gtk-straw-viewer.glade
+++ b/share/gtk-straw-viewer.glade
@@ -906,6 +906,7 @@ Author: Trizen https://github.com/trizen
                                                           <object class="GtkComboBoxText" id="comboboxtext10">
                                                             <property name="visible">True</property>
                                                             <property name="can-focus">False</property>
+                                                            <property name="tooltip-text" translatable="yes">Type of search results</property>
                                                             <property name="active">0</property>
                                                             <items>
                                                             <item translatable="yes">video</item>
@@ -959,6 +960,7 @@ Author: Trizen https://github.com/trizen
                                                           <object class="GtkComboBoxText" id="comboboxtext2">
                                                             <property name="visible">True</property>
                                                             <property name="can-focus">False</property>
+                                                            <property name="tooltip-text" translatable="yes">Search order for videos</property>
                                                             <property name="active">0</property>
                                                             <items>
                                                             <item translatable="yes">relevance</item>
@@ -1052,6 +1054,7 @@ long – longer than 20 minutes</property>
                                                       <object class="GtkComboBoxText" id="comboboxtext3">
                                                         <property name="visible">True</property>
                                                         <property name="can-focus">False</property>
+                                                        <property name="tooltip-text" translatable="yes">Retrieve only videos that have closed-captions</property>
                                                         <property name="active">0</property>
                                                         <items>
                                                           <item translatable="yes">any</item>
@@ -1092,6 +1095,7 @@ long – longer than 20 minutes</property>
                                                       <object class="GtkComboBoxText" id="comboboxtext4">
                                                         <property name="visible">True</property>
                                                         <property name="can-focus">False</property>
+                                                        <property name="tooltip-text" translatable="yes">Retrieve only videos with resolution 720p+</property>
                                                         <property name="active">0</property>
                                                         <items>
                                                           <item translatable="yes">any</item>
@@ -1115,6 +1119,47 @@ long – longer than 20 minutes</property>
                                                 <property name="expand">False</property>
                                                 <property name="fill">False</property>
                                                 <property name="position">4</property>
+                                              </packing>
+                                            </child>
+                                            <child>
+                                              <object class="GtkFrame" id="frame15">
+                                                <property name="visible">True</property>
+                                                <property name="can-focus">False</property>
+                                                <property name="label-xalign">0</property>
+                                                <property name="shadow-type">none</property>
+                                                <child>
+                                                  <object class="GtkAlignment" id="alignment14">
+                                                    <property name="visible">True</property>
+                                                    <property name="can-focus">False</property>
+                                                    <property name="left-padding">12</property>
+                                                    <child>
+                                                      <object class="GtkComboBoxText" id="comboboxtext5">
+                                                        <property name="visible">True</property>
+                                                        <property name="can-focus">False</property>
+                                                        <property name="tooltip-text" translatable="yes">Retrieve only videos with Creative-Commons license</property>
+                                                        <property name="active">0</property>
+                                                        <items>
+                                                          <item translatable="yes">any</item>
+                                                          <item translatable="yes">creative_commons</item>
+                                                        </items>
+                                                        <signal name="changed" handler="combobox_license_changed" swapped="no"/>
+                                                      </object>
+                                                    </child>
+                                                  </object>
+                                                </child>
+                                                <child type="label">
+                                                  <object class="GtkLabel" id="label23">
+                                                    <property name="visible">True</property>
+                                                    <property name="can-focus">False</property>
+                                                    <property name="label" translatable="yes">&lt;b&gt;Video License:&lt;/b&gt;</property>
+                                                    <property name="use-markup">True</property>
+                                                  </object>
+                                                </child>
+                                              </object>
+                                              <packing>
+                                                <property name="expand">False</property>
+                                                <property name="fill">False</property>
+                                                <property name="position">5</property>
                                               </packing>
                                             </child>
                                             <child>
@@ -1143,8 +1188,7 @@ long – longer than 20 minutes</property>
                                                             <object class="GtkSpinButton" id="spinbutton1">
                                                             <property name="visible">True</property>
                                                             <property name="can-focus">True</property>
-                                                            <property name="tooltip-text" translatable="yes">The maximum number of results per page.
-Recommended: 10</property>
+                                                            <property name="tooltip-text" translatable="yes">The maximum number of results per page.</property>
                                                             <property name="max-length">2</property>
                                                             <property name="invisible-char">•</property>
                                                             <property name="caps-lock-warning">False</property>
@@ -1239,6 +1283,7 @@ Recommended: 10</property>
                                                             <object class="GtkComboBoxText" id="comboboxtext1">
                                                             <property name="visible">True</property>
                                                             <property name="can-focus">False</property>
+                                                            <property name="tooltip-text" translatable="yes">Retrieve only videos newer than this.</property>
                                                             <items>
                                                             <item translatable="yes">anytime</item>
                                                             <item translatable="yes">hour</item>
@@ -1340,6 +1385,7 @@ Unless the author name is valid, this field is ignored.</property>
                                                             <property name="visible">True</property>
                                                             <property name="can-focus">True</property>
                                                             <property name="receives-default">False</property>
+                                                            <property name="tooltip-text" translatable="yes">Show thumbnails for videos in search results.</property>
                                                             <property name="draw-indicator">True</property>
                                                             <signal name="toggled" handler="thumbs_checkbutton_toggled" swapped="no"/>
                                                             </object>
@@ -1355,6 +1401,7 @@ Unless the author name is valid, this field is ignored.</property>
                                                             <property name="visible">True</property>
                                                             <property name="can-focus">True</property>
                                                             <property name="receives-default">False</property>
+                                                            <property name="tooltip-text" translatable="yes">Start videos in fullscreen mode.</property>
                                                             <property name="draw-indicator">True</property>
                                                             <signal name="toggled" handler="toggled_fullscreen" swapped="no"/>
                                                             </object>
@@ -1365,28 +1412,31 @@ Unless the author name is valid, this field is ignored.</property>
                                                             </packing>
                                                             </child>
                                                             <child>
-                                                            <object class="GtkCheckButton" id="dash_checkbutton">
-                                                            <property name="label" translatable="yes">DASH support</property>
-                                                            <property name="visible">True</property>
-                                                            <property name="can-focus">True</property>
-                                                            <property name="receives-default">False</property>
-                                                            <property name="draw-indicator">True</property>
-                                                            <signal name="toggled" handler="toggled_dash_support" swapped="no"/>
-                                                            </object>
-                                                            <packing>
-                                                            <property name="expand">False</property>
-                                                            <property name="fill">False</property>
-                                                            <property name="position">2</property>
-                                                            </packing>
-                                                            </child>
-                                                            <child>
                                                             <object class="GtkCheckButton" id="audio_only_checkbutton">
                                                             <property name="label" translatable="yes">Audio only</property>
                                                             <property name="visible">True</property>
                                                             <property name="can-focus">True</property>
                                                             <property name="receives-default">False</property>
+                                                            <property name="tooltip-text" translatable="yes">Play videos as audio.</property>
                                                             <property name="draw-indicator">True</property>
                                                             <signal name="toggled" handler="toggled_audio_only" swapped="no"/>
+                                                            </object>
+                                                            <packing>
+                                                            <property name="expand">True</property>
+                                                            <property name="fill">True</property>
+                                                            <property name="position">2</property>
+                                                            </packing>
+                                                            </child>
+                                                            <child>
+                                                            <object class="GtkCheckButton" id="dash_checkbutton">
+                                                            <property name="label" translatable="yes">DASH videos</property>
+                                                            <property name="visible">True</property>
+                                                            <property name="can-focus">True</property>
+                                                            <property name="receives-default">False</property>
+                                                            <property name="tooltip-text" translatable="yes">Support for videos in DASH format.
+When disabled, streams in DASH format will be ignored if there exists an alternative.</property>
+                                                            <property name="draw-indicator">True</property>
+                                                            <signal name="toggled" handler="toggled_dash_support" swapped="no"/>
                                                             </object>
                                                             <packing>
                                                             <property name="expand">True</property>
@@ -1400,13 +1450,14 @@ Unless the author name is valid, this field is ignored.</property>
                                                             <property name="visible">True</property>
                                                             <property name="can-focus">True</property>
                                                             <property name="receives-default">False</property>
+                                                            <property name="tooltip-text" translatable="yes">Clear previous search results after each new search.</property>
                                                             <property name="draw-indicator">True</property>
                                                             <signal name="toggled" handler="toggled_clear_search_list" swapped="no"/>
                                                             </object>
                                                             <packing>
                                                             <property name="expand">True</property>
                                                             <property name="fill">True</property>
-                                                            <property name="position">4</property>
+                                                            <property name="position">5</property>
                                                             </packing>
                                                             </child>
                                                             </object>
@@ -1441,7 +1492,7 @@ Unless the author name is valid, this field is ignored.</property>
                                               <packing>
                                                 <property name="expand">False</property>
                                                 <property name="fill">False</property>
-                                                <property name="position">6</property>
+                                                <property name="position">7</property>
                                               </packing>
                                             </child>
                                             <child>
@@ -1470,7 +1521,7 @@ Unless the author name is valid, this field is ignored.</property>
                                                 <property name="expand">False</property>
                                                 <property name="fill">False</property>
                                                 <property name="padding">14</property>
-                                                <property name="position">7</property>
+                                                <property name="position">8</property>
                                               </packing>
                                             </child>
                                             <child>
@@ -1519,7 +1570,7 @@ When the specified resolution is not found, the best available resolution is use
                                                 <property name="expand">False</property>
                                                 <property name="fill">False</property>
                                                 <property name="pack-type">end</property>
-                                                <property name="position">8</property>
+                                                <property name="position">9</property>
                                               </packing>
                                             </child>
                                           </object>
